<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/changePasswordabel"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Change Password"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/oldpassID"
        android:hint="Old Password"
        style="@style/LabelStyle"
        android:layout_below="@+id/changePasswordabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:inputType="textPassword"
        />


    <EditText
        android:id="@+id/newpasswordID"
        android:hint="New Password"
        style="@style/LabelStyle"
        android:layout_below="@+id/oldpassID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/passwordConfID"
        android:hint="Confirm Password"
        style="@style/LabelStyle"
        android:layout_below="@+id/newpasswordID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/submitID"
        style="@style/LabelStyle"
        android:background="@color/darkGrey"
        android:layout_below="@+id/passwordConfID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:textColor="@android:color/white"
        android:text="Submit"
        android:onClick="goProfile"
        />

    <Button
        android:id="@+id/cancelID"
        style="@style/LabelStyle"
        android:background="@android:color/white"
        android:layout_below="@+id/submitID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="Cancel"
        android:onClick="goSettings"
        />

</RelativeLayout>