...
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src= "@drawable/bsologo"
        />

    <EditText
        android:id="@+id/emailID"
        android:hint="@string/email_label"
        style="@style/LabelStyle"
        android:layout_below="@+id/logoID"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:inputType="textEmailAddress"
        android:ems="8"
        />

    <EditText
        android:id="@+id/passwordID"
        android:hint="@string/password_label"
        style="@style/LabelStyle"
        android:layout_below="@+id/emailID"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:layout_marginTop="10dp"
...
