<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
    android:id="@+id/returnToItems"
    android:layout_height="70dp"
    android:layout_width="100dp"
    android:text="@string/items_label"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:onClick="returnToItems"
    />

    <Button
        android:id="@+id/settingsButton"
        android:layout_height="70dp"
        android:layout_width="100dp"
        android:text="Settings"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="300dp"
        android:onClick="gosettings"
        />

    <TextView
        android:id="@+id/profileLabel"
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="@string/profile_label"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profileLabel"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src= "@drawable/profileimage"
        />

    <Button
        android:id="@+id/donateID"
        android:layout_below="@id/profilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_height="70dp"
        android:layout_width="100dp"
        android:text="Donate Item"
        android:onClick="sendEmail"
        />

    <TextView
        android:id="@+id/myBidsLabel"
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/donateID"
        android:textSize="28sp"
        android:text="My Bids:"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myBidsLabel"
        >
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:background="@color/lightGrey"
            android:layout_below="@+id/myBidsLabel"
            android:divider="@color/darkGrey"
            android:shrinkColumns="1"
            >
        </TableLayout>
    </ScrollView>
</RelativeLayout>