<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/returnToItems"
        android:layout_height="70dp"
        android:layout_width="100dp"
        android:text="@string/profile_label"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="goProfile"
        />

    <TextView
        android:id="@+id/profileLabel"
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="SETTINGS"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profileLabel"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src= "@drawable/profileimage"
        />


    <Button
        android:id="@+id/changePassword"
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="Change Password"
        android:layout_below="@+id/profilePic"
        android:onClick="goChange"
        />

    <Button
        android:id="@+id/logout"
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="Logout"
        android:layout_below="@+id/changePassword"
        android:onClick="goLogin"
        />

</RelativeLayout>