<resources>
    <string name="app_name">SaRePaCh</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">LOG IN</string>
    <string name="signup_label">SIGN UP</string>
    <string name="items_label">AUCTION ITEMS</string>
    <string name="profile_label">PROFILE</string>
    <string name="payment_label">PAYMENT INFO</string>
    <string name="spinner_title">Filters</string>

</resources>
